Fix overflow in Home Page Project Status Animation

--- a/components/sections/home-page/bottom-section/styles/knowTheProjectStatus.module.scss
+++ b/components/sections/home-page/bottom-section/styles/knowTheProjectStatus.module.scss
@@ -26,6 +26,9 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    
+    width: fit-content;
+
 
     @include isSmallerRange {
       margin-bottom: 5rem;
